--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -78,4 +78,8 @@ html {
 // Reusuable CSS
 @import './reusuable';
 
+@import './elements/button';
+
 @import './layout/header';
+
+@import './include/home';
