--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -82,6 +82,7 @@ html {
 
 @import './layout/header';
 
+@import './include/new';
 @import './include/home';
 @import './include/about';
 @import './include/trick';
