--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -81,6 +81,7 @@ html {
 @import './elements/button';
 
 @import './layout/header';
+@import './layout/footer';
 
 @import './include/new';
 @import './include/home';
