--- a/src/html/layout/header.html
+++ b/src/html/layout/header.html
@@ -10,7 +10,7 @@
     <div class="nav__menu" id="nav-menu">
       <ul class="nav__list">
         <li class="nav__item">
-          <a href="#home" class="nav__link">home</a>
+          <a href="#home" class="nav__link nav__link--active">home</a>
         </li>
 
         <li class="nav__item">
