--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -79,6 +79,7 @@ html {
 @import './reusuable';
 
 @import './elements/button';
+@import './elements/scrollup';
 
 @import './layout/header';
 @import './layout/footer';
