--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -91,3 +91,18 @@ html {
 @import './include/category';
 @import './include/discount';
 @import './include/newsletter';
+
+
+
+
+// Scroll Bar
+
+::-webkit-scrollbar {
+  width: .6rem;
+  background: #413e3e;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #272525;
+  border-radius: .5rem;
+}
