--- a/src/scss/include/discount.scss
+++ b/src/scss/include/discount.scss
@@ -22,3 +22,38 @@
     justify-self: center;
   }
 }
+
+
+
+// Discount Media
+
+@include min-width ('laptop', $media-type: screen) {
+  .discount {
+    &__container {
+      grid-template-columns: repeat(2, max-content);
+      justify-content: center;
+      align-items: center;
+      column-gap: 3rem;
+
+      padding: 3rem 0;
+      border-radius: 3rem;
+    }
+
+    &__img {
+      width: 350px;
+      order: -1;
+    }
+
+    &__data {
+      padding-right: 6rem;
+    }
+  }
+}
+
+@include min-width ('large', $media-type: screen) {
+  .discount {
+    &__container {
+      column-gap: 7rem;
+    }
+  }
+}
