--- a/src/scss/include/about.scss
+++ b/src/scss/include/about.scss
@@ -18,3 +18,45 @@
     justify-self: center;
   }
 }
+
+
+
+// About Media
+
+@include min-width ('medium', $media-type: screen) {
+  .about {
+    &__container {
+      grid-template-columns: .8fr;
+      justify-content: center;
+    }
+  }
+}
+
+@include min-width ('laptop', $media-type: screen) {
+  .about {
+    &__container {
+      grid-template-columns: repeat(2, 1fr);
+      align-items: center;
+    }
+
+    &__title, &__data {
+      text-align: initial;
+    }
+
+    &__img {
+      width: 250px;
+    }
+  }
+}
+
+@include min-width ('large', $media-type: screen) {
+  .about {
+    &__img {
+      width: 350px;
+    }
+
+    &__description {
+      padding-right: 2rem;
+    }
+  }
+}
