--- a/src/scss/libs/libs.scss
+++ b/src/scss/libs/libs.scss
@@ -1,9 +1,20 @@
+@import '../utils/vars';
+@import '../utils/mixins/media';
+
 // Swiper CSS
 @import '~swiper/swiper-bundle';
 
 .swiper-pagination {
   position: initial;
   margin-top: var(--mb-1);
+
+  @include min-width ('laptop', $media-type: screen) {
+    margin-top: var(--mb-2);
+  }
+
+  @include min-width ('desktop', $media-type: screen) {
+    margin-top: var(--mb-2-5);
+  }
 
   &-bullet {
     size: 5px;
